force-app/main/default/objects/Partner_Reassignment__c/Partner_Reassignment__c.object-meta.xml
<CustomObject>
    <label>Partner Reassignment</label>
    <pluralLabel>Partner Reassignments</pluralLabel>
    <nameField>
        <displayFormat>PRA-{00000000}</displayFormat>
        <label>Reassignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>