force-app/main/default/objects/Partner_Reassignment__c/fields/Current_Partner__c.field-meta.xml
<CustomField>
    <fullName>Current_Partner__c</fullName>
    <label>Current Partner</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Reassignments_As_Current_Partner</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>