force-app/main/default/objects/Partner_Reassignment__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>4096</length>
    <type>LongTextArea</type>
    <required>true</required>
</CustomField>