force-app/main/default/objects/Partner_Reassignment__c/fields/Requested_Partner__c.field-meta.xml
<CustomField>
    <fullName>Requested_Partner__c</fullName>
    <label>Requested Partner</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Reassignments_As_Requested_Partner</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>