force-app/main/default/objects/Partner_Reassignment__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description
  >'Partner_Renewal__c' or 'Partner_Expansion__c' - which object Target_Record_Id__c refers to.</description>
    <label>Target Object</label>
    <length>40</length>
    <type>Text</type>
    <required>true</required>
</CustomField>